runs/runs/github.com/hugadams/scikit-spectra/logs/test-notebook-skspec-tests-regression-REGRESSION.ipynb-2020-07-06T09.57.txt
[I 200706 09:58:40 inrepo:35] Testing notebook skspec/tests/regression/REGRESSION.ipynb
[I 200706 09:58:41 execute:404] Executing notebook with kernel: python
Traceback (most recent call last):
  File "/src/inrepo.py", line 76, in <module>
    main()
  File "/src/inrepo.py", line 72, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 38, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path))
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
from skspec.data import aunps_glass
ts= aunps_glass()
cols = ts.columns[0:5]

#REPLACE WITH AS INTERVAL AND STUFF

print cols.datetimeindex, '\n\n'
print ts.columns.datetimeindex, '\n\n'
print cols.convert('m'), '\n\n'
print cols.convert('m').convert('s'), '\n\n'
print cols.convert('m').convert('s').datetimeindex, '\n\n'
print cols.convert(None), '\n\n'
print cols.convert(None).convert('dti'), '\n\n'
print cols.convert('m').convert('dti'), '\n\n'
#del cols.datetimeindex, '\n\n'
#print cols, '\n\n'
------------------

[0;36m  File [0;32m"<ipython-input-10-7ea9a7279398>"[0;36m, line [0;32m7[0m
[0;31m    print cols.datetimeindex, '\n\n'[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(cols.datetimeindex, '\n\n')?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(cols.datetimeindex, '\n\n')? (<ipython-input-10-7ea9a7279398>, line 7)


Container exited with status: {'Error': None, 'StatusCode': 1}
